profile cleanup (WIP)